--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "gsap": "^3.13.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
